--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -5,59 +5,45 @@
 }
 
 .container {
-    /*flex-direction: column;*/
+    display: flex;
+    align-content: center;
 }
 
 .header {
-    margin: 0 auto;
+    margin: 30px auto;
 }
 
 .skills {
     width: 100%;
-    height: 90%;
-
     display: flex;
     justify-content: space-around;
 }
 
-.containerSkill {
-    border: 1px solid;
+.skill {
+    background-color: mistyrose;
     width: 30%;
-    height: 80%;
+    min-height: 80%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.aboutSkill {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    align-content: center;
+    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between
+    align-content: flex-start;
 }
 
-
-.img {
-    height: 40%;
-
-
-}
-.border{
-    border: 1px solid;
-    width: 60%;
-    height: 60%;
-}
-.imgText {
-    height: 60%;
+.icon {
+    background-color: gray;
+    min-width: 80px;
+    min-height: 80px;
 }
 
 .about {
-    height: 55%;
-    width: 100%;
-    border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
+
+.aboutSkill {
+text-align: center;
+}
+
