--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -2,37 +2,53 @@
     height: 100vh;
     background-color: darkseagreen;
     display: flex;
-}
-
-.container {
-    display: flex;
-    align-content: center;
-}
-
-.header {
-    margin: 30px auto;
-}
-
-.skills {
-    width: 100%;
-    display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.skill {
-    background-color: mistyrose;
-    width: 30%;
-    min-height: 80%;
+.container {
+    /*display: flex;*/
+    /*align-content: center;*/
+    /*flex-wrap: wrap;*/
+    /*flex-direction: column;*/
+    /*justify-content: space-around*/
+}
+.skillItem {
+    margin: 0 auto;
+}
+/*.header {*/
+/*    margin: 30px auto;*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*}*/
+
+.skills {
+    /*    width: 100%;*/
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    align-content: flex-start;
+    /*flex-wrap: wrap;*/
+}
+
+.skill {
+    /*min-width: 250px    ;*/
+    /*max-width: 250px    ;*/
+    width: 270px;
+    /*background-color: mistyrose;*/
+    /*width: 30%;*/
+    /*min-height: 80%;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*flex-wrap: wrap;*/
+    /*align-content: flex-start;*/
+    align-items: center;
+
 }
 
 .icon {
     background-color: gray;
-    min-width: 80px;
-    min-height: 80px;
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
 }
 
 .about {
@@ -44,6 +60,6 @@
 }
 
 .aboutSkill {
-text-align: center;
+    text-align: center;
 }
 
