--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -5,6 +5,6 @@
     margin: 0 auto;
     display: flex;
     align-content: space-around;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
