--- a/src/common/Footer/Footer.module.css
+++ b/src/common/Footer/Footer.module.css
@@ -1,4 +1,24 @@
 .footer {
-    height: 300px;
+    height: 140px;
+    background-color: rgba(128, 128, 128, 0.4);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+}
+.containerSqu {
+    display: flex;
+    justify-content: center;
+}
+.squares {
+  width: 30px;
+  height: 30px;
+    background-color: #bebbbb;
+}
+.square {
+    width: 30px;
+    height: 30px;
     background-color: gray;
+
 }
