--- a/src/Contacts/Contacts.module.css
+++ b/src/Contacts/Contacts.module.css
@@ -7,8 +7,8 @@
 
 .blockContacts {
     margin: 0 auto;
-    width: 80%;
-    height: 60%;
+    min-width: 80%;
+    min-height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,7 +19,7 @@
 }
 /*test*/
 .blockContact {
-    height: 80vh;
+    min-height: 80vh;
     width: 80%;
     border: 1px solid black;
     margin: 0 auto;
@@ -43,6 +43,7 @@
     align-items: flex-start;
     width: 70%;
     height: 40%;
+    min-height: 350px;
     justify-content: space-around;
     align-content: center;
     border: 1px solid;
