--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -1,5 +1,5 @@
 .skillBlock {
-    height: 100vh;
+    min-height: 100vh;
     background-color: darkseagreen;
     display: flex;
     flex-wrap: wrap;
@@ -17,16 +17,14 @@
     margin: 0 auto;
 }
 /*.header {*/
-/*    margin: 30px auto;*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
+
 /*}*/
 
 .skills {
-    /*    width: 100%;*/
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;;
 }
 
 .skill {
@@ -46,9 +44,9 @@
 
 .icon {
     background-color: gray;
-    width: 80px;
-    height: 80px;
-    margin: 0 auto;
+    min-height: 80px;
+    min-height: 80px;
+    margin: 5px auto;
 }
 
 .about {
@@ -57,6 +55,7 @@
     align-content: center;
     align-items: center;
     flex-wrap: wrap;
+
 }
 
 .aboutSkill {
