--- a/src/common/Work_remotely/Work_remotely.module.css
+++ b/src/common/Work_remotely/Work_remotely.module.css
@@ -1,18 +1,19 @@
 .block {
     height: 35vh;
     background-color: #a5c975;
+    display: flex;
 
 }
 
 .container {
     width: 80%;
-    margin: 0 auto;
+    margin: 5% auto;
     border: 1px solid;
     text-align: center;
-    min-height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
 }
 
 .title {
