--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,8 +1,13 @@
 .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+
     height: 80px;
     background-color: #6dbde8;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+
 }
