--- a/src/MyWorks/My_works.module.css
+++ b/src/MyWorks/My_works.module.css
@@ -1,15 +1,14 @@
 .block {
     min-height: 100vh;
-    background-color: #ecc1c4;
+    background-color: #252527;
     display: flex;
     flex-direction: column;
-
 }
 
 .header {
-    background-color: #ecc1c4;
+    background-color: #252527;
     margin: 5%;
-
+color: #fff;
 
 }
 
@@ -17,6 +16,15 @@
     border-bottom: 1px solid;
     width: 100%;
     text-align: center;
+    margin-bottom: 30px;
+}
+.title h2{
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 0;
+    font-weight: 300;
+    color: #fff;
+    text-transform: capitalize;
+    /*font: 700 40px/1.2 'Josefin Sans', sans-serif;*/
 }
 
 .content {
