--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -3,7 +3,7 @@
     border: 1px solid black;
     margin: 0 auto;
     display: flex;
-    align-content: space-around;
+    align-content: center;
     justify-content: space-around;
     flex-wrap: wrap;
 }
