--- a/src/MyWorks/My_works.module.css
+++ b/src/MyWorks/My_works.module.css
@@ -1,17 +1,15 @@
 .block {
     min-height: 100vh;
-    background-color: #252527;
+    background-color: #1f1f20;
     display: flex;
     flex-direction: column;
 }
 
 .header {
-    background-color: #252527;
+    background-color: #1f1f20;
     margin: 5%;
-color: #fff;
-
+    color: #fff;
 }
-
 
 .content {
     margin-top: 50px;
@@ -25,14 +23,14 @@ color: #fff;
 }
 
 .work {
-    border: 1px solid;
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 370px;
+    width: 500px;
     text-align: center;
-    height: 100%;
+    min-height: 600px;
     margin: 5px;
+    background-color: #252527;
 }
 
 .img {
@@ -43,12 +41,35 @@ color: #fff;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .about {
     height: 34%;
     min-height: 250px;
+    padding: 25px 20px;
 }
+
+.about h3 {
+    font-family: 'Josefin Sans', sans-serif;
+    margin-bottom: 15px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #fff;
+}
+
+.about_works {
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    font-size: inherit;
+    text-indent: inherit;
+    font-weight: 400;
+    font-stretch: normal;
+    line-height: 1.8;
+}
+
 .span {
     height: 150px;
 }
