--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,8 +1,7 @@
 .header {
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     width: 100%;
-
     height: 80px;
     background-color: #6dbde8;
     display: flex;
