--- a/src/common/components/Title/Title.module.scss
+++ b/src/common/components/Title/Title.module.scss
@@ -1,4 +1,5 @@
 @import '/src/common/styles/varabiles.scss';
+@import "src/common/styles/mixin";
 .title {
     margin: 0 0 30px;
     position: relative;
@@ -14,13 +15,13 @@
     }
     & h2{
         margin: 0;
-        font-family: 'Josefin Sans', sans-serif;
-        font-weight: 300;
-        font-size: 36px;
-        color: $textColor;
+        @include text($fontFamilyJosefin, 300, 36px, 1.2);
+        //font-family: 'Josefin Sans', sans-serif;
+        //font-weight: 300;
+        //font-size: 36px;
+        //line-height: 1.2;
+        letter-spacing: 3px;
         text-transform: capitalize;
-        letter-spacing: 5px;
-        line-height: 1.2;
     }
 }
 
