--- a/src/common/styles/varabiles.scss
+++ b/src/common/styles/varabiles.scss
@@ -2,3 +2,5 @@ $textColor: #fff;
 $secondTextColor: #4e93e6;
 $bgFirstColor: #1f1f20;
 $bgSecondColor: #252527;
+$fontFamilyJosefin: 'Josefin Sans', sans-serif;
+$fontFamilyPoppins: 'Poppins', sans-serif;
