added footer and hire me

--- a/src/common/styles/varabiles.scss
+++ b/src/common/styles/varabiles.scss
@@ -1,6 +1,7 @@
 $textColor: #fff;
 $secondTextColor: #4e93e6;
 $bgFirstColor: #1f1f20;
+//$bgSecondColor: rgba(37, 37, 39, 0.17);
 $bgSecondColor: #252527;
 $fontFamilyJosefin: 'Josefin Sans', sans-serif;
 $fontFamilyPoppins: 'Poppins', sans-serif;
