--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -5,26 +5,38 @@
   background-color: $bgFirstColor;
   padding: 10% 0;
   border: 1px solid;
+  max-height: 60vh;
 
   .blockContact {
     animation-duration: 1.25s;
-    min-height: 80vh;
+    min-height: 70vh;
     width: 80%;
-    border: 1px solid $textColor;
+    //border: 1px solid $textColor;
     margin: 0 auto;
     @include flexFirstStyle(flex, column, wrap, center, center);
     //align-content: space-around;
     .input {
       @include flexFirstStyle(flex, column, nowrap, space-around, flex-start);
       width: 70%;
-      height: 40%;
       min-height: 350px;
       //align-content: center;
       border: 1px solid;
       padding-left: 7px;
 
-      & input, textarea, button {
-        min-width: 50%;
+      & input, textarea {
+        width: 80%;
+        background-color: #252527;
+        border: 1px solid #4a4a4a;
+      }
+
+      & textarea {
+        max-width: 80%;
+        min-width: 80%;
+        min-height: 140px;
+        max-height: 180px;
+        //visibility: visible;
+        animation-delay: 0.2s;
+        animation-name: fadeInUp;
       }
 
       & button {
@@ -36,7 +48,7 @@
         padding: 7px 20px;
         transition: all 0.4s ease-in-out 0s;
         background: transparent;
-        max-width: 170px;
+        max-width: 100px;
         margin: 15px auto;
         z-index: 22;
         text-align: center;
@@ -44,21 +56,23 @@
         border: none;
         position: relative;
         cursor: pointer;
+
         &::after {
           content: "";
           position: absolute;
           left: 0;
           right: 0;
           bottom: 0;
-          height: 10px;
-          width: 50%;
+          height: 8px;
+          width: 80%;
           background: #4e93e6;
           z-index: -1;
           transition: all 0.2s ease-in-out 0s;
-          margin: 0 auto;
+          margin: -5px auto;
         }
+
         &:hover:after {
-          height: 100%;
+          height: 130%;
           width: 100%;
         }
       }
@@ -85,10 +99,6 @@
       //  border: none;
       //  position: relative;
       //}
-    }
-
-    & h3 {
-      @include text($fontFamilyPoppins, 700, inherit, 1.8);
     }
   }
 }
