--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -1,6 +1,6 @@
 .containerMain {
     min-height: 90vh;
-    border: 1px solid black;
+    //border: 1px solid black;
     margin: 0 auto;
 
     display: flex;
