--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -1,9 +1,10 @@
+@import "src/common/styles/varabiles.scss";
 .header {
     /*position: fixed;*/
     top: 0;
     width: 100%;
     height: 80px;
-    background-color: #6dbde8;
+    background-color: $bgSecondColor;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
