--- a/src/NavBar/NavBar.module.scss
+++ b/src/NavBar/NavBar.module.scss
@@ -1,8 +1,24 @@
 @import 'src/common/styles/varabiles';
 .nav {
+  position: fixed;
+  //right: -100px;
+  right: 50px;
+  //top: -100px;
+  //z-index: 100;
+  //width: 200px;
+  //height: 200px;
+  //background-color: rgba(31,31,32,.9);
+  border-radius: 15% 85%;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  border: none;
+  opacity: 0.5;
+  outline: none !important;
+
+
   box-sizing: border-box;
-  background-color: $bgSecondColor;
-  color: $textColor;
+  background-color: $bgFirstColor;
+  color: $secondTextColor;
   //border: 1px solid darkred;
   //width: 300px;
   //display: flex;
@@ -11,14 +27,15 @@
   //  box-shadow: 0 0 0 120vw rgb(31 31 32), 0 0 0 120vh rgb(31 31 32);
   //  opacity: 0.9 /*border-radius: 0;*/;
   .listMenu {
-    border: 1px solid darkred;
+    padding-right: 35px;
+    border: 1px solid $secondTextColor;
     width: 300px;
     display: flex;
     justify-content: space-between;
     .menuItem {
       list-style-type: none;
     & a {
-      color: $textColor;
+      color: $secondTextColor;
     }
     }
   }
