--- a/src/NavBar/NavBar.module.scss
+++ b/src/NavBar/NavBar.module.scss
@@ -1,6 +1,6 @@
 @import 'src/common/styles/varabiles';
 .nav {
-  position: fixed;
+  //position: fixed;
   //right: -100px;
   right: 50px;
   //top: -100px;
@@ -17,7 +17,7 @@
 
 
   box-sizing: border-box;
-  background-color: $bgFirstColor;
+  //background-color: $bgFirstColor;
   color: $secondTextColor;
   //border: 1px solid darkred;
   //width: 300px;
