--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -21,7 +21,7 @@
 
 .skill {
     width: 270px;
-    height: 100%;
+    min-height: 295px;
     align-items: center;
     //border: 1px solid;
     margin: 5px;
