--- a/src/NavBar/NavBar.module.scss
+++ b/src/NavBar/NavBar.module.scss
@@ -27,7 +27,7 @@
   //  box-shadow: 0 0 0 120vw rgb(31 31 32), 0 0 0 120vh rgb(31 31 32);
   //  opacity: 0.9 /*border-radius: 0;*/;
   .listMenu {
-    padding-right: 35px;
+    padding: 0 15px;
     border: 1px solid $secondTextColor;
     width: 300px;
     display: flex;
