--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -1,19 +1,24 @@
 @import "src/common/styles/varabiles";
 @import "src/common/styles/mixin";
+
 .mainblock {
     min-height: 100vh;
     background-color: $bgFirstColor;
     color: $textColor;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
     .about {
-        min-width: 280px;
-        background-color: $bgFirstColor;
+        margin-top: 120px;
+        min-width: 400px;
+        //background-color: $bgFirstColor;
         .text_about{
             margin: 15px;
             @include text($fontFamilyJosefin, 700, 16px, 1px);
         }
         .text_aboutSecond{
-            margin: 15px 15px 25px 30px;
+            margin: 15px 15px 25px 0;
             @include text($fontFamilyJosefin, 700, 16px, 1px);
         }
         .text_h1{
@@ -28,10 +33,10 @@
             &::after{
                 content: "";
                 position: absolute;
-                left: 18px;
-                right: 0;
-                bottom: 0;
-                height: 20px;
+                left: 15px;
+                right: 10px;
+                bottom: 3px;
+                height: 8px;
                 width: 100%;
                 z-index: -1;
                 background-color: $secondTextColor;
