--- a/src/NavBar/NavBar.module.scss
+++ b/src/NavBar/NavBar.module.scss
@@ -28,6 +28,7 @@
   //  opacity: 0.9 /*border-radius: 0;*/;
   .listMenu {
     padding: 0 15px;
+    margin: 0 10px;
     border: 1px solid $secondTextColor;
     width: 300px;
     display: flex;
