--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -1,13 +1,16 @@
 @import "src/common/styles/varabiles.scss";
 .header {
-    /*position: fixed;*/
-    top: 0;
+    position: fixed;
+    //top: 0;
+    //margin-left: 70%;
+    z-index: 20;
     width: 100%;
-    height: 80px;
+    height: 50px;
     background-color: $bgSecondColor;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+    //opacity: 0.6;
 
 }
