--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -72,7 +72,7 @@
   width: 280px;
   height: 400px;
   min-height: 55%;
-  background-color: #bebbbb;
+  background-color: $textColor;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
