--- a/src/common/components/button/Button.module.scss
+++ b/src/common/components/button/Button.module.scss
@@ -1,2 +1,38 @@
 @import 'src/common/styles/varabiles';
 @import 'src/common/styles/mixin';
+
+.button {
+  color: $textColor;
+  font-family: $fontFamilyPoppins;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 1px;
+  padding: 7px 20px;
+  transition: all 0.4s ease-in-out 0s;
+  background: transparent;
+  max-width: 100px;
+  margin: 15px auto;
+  z-index: 1;
+  text-align: center;
+  width: 100%;
+  border: none;
+  position: relative;
+  cursor: pointer;
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 8px;
+    width: 80%;
+    background: #4e93e6;
+    z-index: -1;
+    transition: all 0.2s ease-in-out 0s;
+    margin: -5px auto;
+  }
+  &:hover:after {
+    height: 130%;
+    width: 100%;
+  }
+}
