--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -9,18 +9,22 @@
   background-size: cover;
   background-repeat: repeat;
   transition: 0.5s;
+  @media screen and (max-width: 440px){
+    min-height: 80vh;
+    //margin-top: 20px;
+  }
   &:hover .photo {
-    width: 300px;
-    height: 420px;
-    margin-top: 10px;
+    width: 250px;
+    height: 330px;
+    margin-top: 110px;
     position: relative;
     z-index: 1;
     transition: 1s;
     .img {
       transition: 1s;
       margin-top: 22px;
-      width: 280px;
-      height: 400px;
+      width: 245px;
+      height: 310px;
       min-height: 55%;
       background-size: cover;
       background-image: url("./../assets/img/myFoto.jpg");
@@ -31,8 +35,8 @@
         position: absolute;
         right: -20px;
         top: -1px;
-        width: 290px;
-        height: 430px;
+        width: 250px;
+        height: 340px;
         border: 5px solid $secondTextColor;
         z-index: -1;
       }
@@ -40,19 +44,22 @@
   }
   .about {
     margin-top: 120px;
-    min-width: 400px;
-    //background-color: $bgFirstColor;
+    min-width: 330px;
+    @media screen and (max-width: 440px){
+      margin-top: 20px;
+    }
   }
   .photo {
-    width: 300px;
-    height: 420px;
+    margin-top: 80px;
+    width: 285px;
+    height: 320px;
     position: relative;
     z-index: 1;
     transition: 1s;
     .img {
       margin-top: 20px;
-      width: 280px;
-      height: 400px;
+      width: 270px;
+      height: 330px;
       min-height: 55%;
       background-size: cover;
       background-image: url("./../assets/img/myFoto.jpg");
@@ -62,16 +69,16 @@
         position: absolute;
         right: -20px;
         top: -1px;
-        width: 290px;
-        height: 430px;
+        width: 265px;
+        height: 320px;
         border: 5px solid $secondTextColor;
         z-index: -1;
       }
     }
     &:hover {
-      margin-top: 20px;
-      width: 280px;
-      height: 400px;
+      margin-top: 120px;
+      width: 255px;
+      height: 335px;
       min-height: 55%;
       transition: 1s;
       position: relative;
@@ -80,8 +87,8 @@
       .img {
         transition: 1s;
         margin-top: 20px;
-        width: 290px;
-        height: 410px;
+        width: 237px;
+        height: 320px;
         min-height: 55%;
         background-image: url("./../assets/img/myFoto.jpg");
       }
