--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -1,6 +1,8 @@
 @import "src/common/styles/varabiles";
 @import "src/common/styles/mixin";
 .skillBlock {
+    //visibility: visible;
+    //animation-name: fadeInUp;
     min-height: 100vh;
     background-color: $bgSecondColor;
     color: $textColor;
@@ -18,7 +20,7 @@
             margin-top: 50px;
             @include flexFirstStyle(flex, row, wrap, space-around, center);
             @media screen and(max-width: 440px){
-                @include flexFirstStyle(flex, column, wrap, space-around, center);
+                @include flexFirstStyle(flex, row, wrap, space-around, center);
             }
         }
     }
@@ -27,6 +29,7 @@
 .skill{
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
+    margin-top: 30px;
     .icon{
         visibility: visible;
         animation-delay: 0.2s;
@@ -40,7 +43,6 @@
             display: block;
             line-height: 80px;
             font-size: 30px;
-            /* box-shadow: -6px 10px 40px rgb(0 0 0 / 6%); */
             text-align: center;
             transform: rotate(45deg);
             transform-origin: center;
@@ -54,7 +56,7 @@
             }
         }
         .aboutSkill{
-            padding-top: 30px;
+            //padding-top: 10px;
             text-align: center;
             & h3 {
                 margin: 0 0 15px;
