--- a/src/MyWorks/My_works.module.scss
+++ b/src/MyWorks/My_works.module.scss
@@ -22,17 +22,51 @@
 .work {
   @include flexFirstStyle(inline-flex, column, nowrap, flex-start, normal);
   width: 350px;
+  height: 350px;
   text-align: center;
-  margin: 5px;
+  //margin: 5px;
   .img {
+    cursor: pointer;
+    width: 350px;
     height: 65%;
-    min-height: 150px;
-    border: 1px solid;
+    //border: 1px solid;
     @include flexFirstStyle(flex, column, nowrap, space-around, center);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    .project{
+      height: 90%;
+      width: 90%;
+      min-height: 150px;
+    }
+    & a {
+      display: none;
+    }
+    &:hover {
+      &::before {
+        background-color: $bgFirstColor;
+      }
+      a {
+        @include text($fontFamilyPoppins, 700, inherit, 2.2);
+        width: 120px;
+        height: 40px;
+        text-align: center;
+        position: absolute;
+        display: block;
+        //top: 45%;
+        //border: 1px solid $secondTextColor;
+        border-radius: 10px;
+        background-color: $secondTextColor;
+        opacity: 0.8;
+      }
+      .project {
+        transition: 1s;
+        height: 100%;
+        width: 100%;
+        min-height: 150px;
+      }
+    }
     &::before {
       position: absolute;
       content: '';
@@ -40,23 +74,34 @@
       right: 0;
       top: 0;
       bottom: 0;
-      background-color: $bgFirstColor;
+
       opacity: 0.3;
     }
     .button {
+
       width: 80px;
-      //height: 50px;
       border-radius: 5px;
       cursor: pointer;
       position: relative;
       z-index: 1;
-      background-color: $secondTextColor;
+      //background-color: $secondTextColor;
       color: $textColor;
+
+      position: absolute;
+      bottom: 140px;
+      height: 80px;
+      //&:hover{
+      //  width: 80px;
+      //  border-radius: 5px;
+      //  cursor: pointer;
+      //  position: relative;
+      //  z-index: 1;
+      //  background-color: $secondTextColor;
+      //  color: $textColor;
+      //}
     }
   }
   .about {
-    //height: 34%;
-    //padding: 25px 20px;
     background-color: $bgSecondColor;
     .about_works {
       @include text($fontFamilyPoppins, 300, inherit, 1.8);
