--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -27,7 +27,8 @@
 }
 
 .skill{
-    flex: 0 0 33.333333%;
+    //flex: 0 0 33.333333%;
+    min-width: 20%;
     max-width: 33.333333%;
     margin-top: 30px;
     .icon{
