--- a/src/MyWorks/My_works.module.scss
+++ b/src/MyWorks/My_works.module.scss
@@ -82,7 +82,7 @@
       width: 80px;
       border-radius: 5px;
       cursor: pointer;
-      position: relative;
+      //position: relative;
       z-index: 1;
       //background-color: $secondTextColor;
       color: $textColor;
