--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -28,9 +28,9 @@
 
 .skill{
     //flex: 0 0 33.333333%;
-    min-width: 20%;
+    min-width: 10%;
     max-width: 33.333333%;
-    margin-top: 30px;
+    margin: 30px 20px 0 20px;
     .icon{
         visibility: visible;
         animation-delay: 0.2s;
