--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -9,6 +9,7 @@
   background-size: cover;
   background-repeat: repeat;
   transition: 0.5s;
+
   @media screen and (max-width: 440px){
     min-height: 80vh;
     //margin-top: 20px;
@@ -45,6 +46,7 @@
   .about {
     margin-top: 120px;
     min-width: 330px;
+
     @media screen and (max-width: 440px){
       margin-top: 20px;
     }
@@ -107,12 +109,13 @@
 
   .text_aboutSecond {
     margin: 15px 15px 25px 0;
+
     @include text($fontFamilyJosefin, 700, 16px, 1px);
     @media screen and(max-width: 440px) {
       margin: 15px 25px;
       @include text($fontFamilyJosefin, 300, 12px, 1px);
     }
-
+    font-size: 14px;
   }
 
   .text_h1 {
