--- a/src/MyWorks/My_works.module.scss
+++ b/src/MyWorks/My_works.module.scss
@@ -36,6 +36,7 @@
     background-repeat: no-repeat;
     position: relative;
     .project{
+      transition: 1s;
       height: 90%;
       width: 90%;
       min-height: 150px;
