--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -1,12 +1,11 @@
 .containerMain {
     transition: 1s;
     min-height: 80vh;
-    //border: 1px solid black;
     margin: 0 auto;
     background-repeat: round;
     display: flex;
     align-content: center;
     flex-wrap: wrap;
-    justify-content: space-around;
-
+    justify-content: space-evenly;
 }
+
