--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -10,14 +10,14 @@
   background-repeat: repeat;
   transition: 0.5s;
 
-  @media screen and (max-width: 440px){
+  @media screen and (max-width: 375px){
     min-height: 80vh;
     //margin-top: 20px;
   }
   &:hover .photo {
     width: 250px;
     height: 330px;
-    margin-top: 110px;
+    //margin-top: 110px;
     position: relative;
     z-index: 1;
     transition: 1s;
@@ -47,12 +47,13 @@
     margin-top: 120px;
     min-width: 330px;
 
-    @media screen and (max-width: 440px){
-      margin-top: 20px;
+    @media screen and (max-width: 375px){
+      margin-top: 80px;
+
     }
   }
   .photo {
-    margin-top: 80px;
+    //margin-top: 80px;
     width: 285px;
     height: 320px;
     position: relative;
@@ -78,7 +79,7 @@
       }
     }
     &:hover {
-      margin-top: 120px;
+      margin-top: 50px;
       width: 255px;
       height: 335px;
       min-height: 55%;
@@ -99,11 +100,11 @@
 
   .text_about {
     transition: 1s;
-    margin: 15px;
+    margin: 100px;
     @include text($fontFamilyJosefin, 700, 25px, 1);
-    @media screen and(max-width: 440px) {
+    @media screen and(max-width: 375px) {
       margin: 25px 35px;
-      @include text($fontFamilyJosefin, 300, 20px, 1px);
+      @include text($fontFamilyJosefin, 400, 12px, 1px);
     }
   }
 
@@ -114,19 +115,22 @@
     min-height: 40px;
 
     @include text($fontFamilyJosefin, 700, 25px, 1.5);
-    @media screen and(max-width: 440px) {
-      margin: 15px 45px;
-      min-width: 350px;
-      @include text($fontFamilyJosefin, 300, 20px, 1);
+
+    @media screen and(max-width: 374px) {
+        margin: 15px 45px;
+        min-width: 350px;
+        //min-height: 75px;
+        @include text($fontFamilyJosefin, 300, 12px, 1);
+
     }
   }
 
   .text_h1 {
     margin-bottom: 25px;
     @include text($fontFamilyJosefin, 400, 30px, 2px);
-    @media screen and(max-width: 440px) {
+    @media screen and(max-width: 375px) {
       margin: 10px 25px;
-      @include text($fontFamilyJosefin, 400, 18px, 2px);
+      @include text($fontFamilyJosefin, 400, 12px, 2px);
     }
   }
 
@@ -134,8 +138,8 @@
     @include text($fontFamilyJosefin, 700, 35px, 2px);
     position: relative;
     z-index: 0;
-    @media screen and(max-width: 440px) {
-      @include text($fontFamilyJosefin, 700, 23px, 2px);
+    @media screen and(max-width: 375px) {
+      @include text($fontFamilyJosefin, 700, 25px, 2px);
     }
 
     &::after {
