--- a/src/MyWorks/My_works.module.scss
+++ b/src/MyWorks/My_works.module.scss
@@ -1,6 +1,16 @@
 @import "src/common/styles/varabiles";
 @import "src/common/styles/mixin";
-
+@keyframes example {
+  35% {
+    transform: rotate(-5deg);
+  }
+  70% {
+    transform: rotate(5deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 .block {
   min-height: 100vh;
   background-color: $bgFirstColor;
@@ -24,12 +34,10 @@
   width: 350px;
   height: 350px;
   text-align: center;
-  //margin: 5px;
   .img {
     cursor: pointer;
     width: 350px;
     height: 65%;
-    //border: 1px solid;
     @include flexFirstStyle(flex, column, nowrap, space-around, center);
     background-size: cover;
     background-position: center;
@@ -40,6 +48,13 @@
       height: 90%;
       width: 90%;
       min-height: 150px;
+      border-radius: 10px;
+    }
+    &:hover{
+      animation-name: example;
+      animation-duration: 1s;
+      //transform: rotate(-45deg);
+
     }
     & a {
       display: none;
@@ -57,8 +72,6 @@
         text-align: center;
         position: absolute;
         display: block;
-        //top: 45%;
-        //border: 1px solid $secondTextColor;
         border-radius: 10px;
         background-color: $secondTextColor;
         opacity: 0.8;
@@ -77,7 +90,6 @@
       right: 0;
       top: 0;
       bottom: 0;
-
       opacity: 0.3;
     }
     .button {
@@ -85,23 +97,11 @@
       width: 80px;
       border-radius: 5px;
       cursor: pointer;
-      //position: relative;
       z-index: 1;
-      //background-color: $secondTextColor;
       color: $textColor;
-
       position: absolute;
       bottom: 140px;
       height: 80px;
-      //&:hover{
-      //  width: 80px;
-      //  border-radius: 5px;
-      //  cursor: pointer;
-      //  position: relative;
-      //  z-index: 1;
-      //  background-color: $secondTextColor;
-      //  color: $textColor;
-      //}
     }
   }
   .about {
